--- a/SV_rentacar/resources/css/top.css
+++ b/SV_rentacar/resources/css/top.css
@@ -1,5 +1,5 @@
     body {
-        background-color: maroon;
+        background-color: white;
     }
 
     .wrapper {
@@ -113,9 +113,9 @@
     }
 
     @media (max-width: 1020px) and (min-width: 768px) {
-        #css { 狭いブラウザとタブレット向け } 
+        
     }
      
     @media (max-width: 767px) {
-        #css{ スマホ向け } 
+         
     }
