--- a/SV_rentacar/resources/css/top.css
+++ b/SV_rentacar/resources/css/top.css
@@ -34,8 +34,7 @@
     }
 
     .fstView-keyvisual {
-        width: 100%;
-        height: 100%;
+        width: 100vw;
         position: relative;
         margin-left: auto;
 	    margin-right: auto;
